--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -23,9 +23,14 @@
 	</li>
 	<li class="mission-distributor-menu-item">
 	  <div class="input-group-sm">
-	    <input type="text"
-		   class="form-control"
-                   placeholder="请输入成员姓名 (或拼音)" >
+	    <div class="input-group input-group-sm mb-3 mission-distributor-input">
+              <input type="text" class="form-control" placeholder="请输入成员姓名 (或拼音)">
+              <div class="input-group-btn">
+                <button class="btn btn-default" type="submit">
+                  <span class="glyphicon glyphicon-triangle-bottom"></span>
+                </button>
+              </div>
+            </div>
 	  </div>
         </li>
         <li class="mission-distributor-menu-item-title">
