Don't draw splitter under last menu item.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1274,7 +1274,7 @@ input[type="checkbox"]:disabled + label::before {
 }
 
 .splitter {
-    @include splitter-mixin
+    @include splitter-mixin;
 }
 
 .setting-page-delete-link {
