--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -23,16 +23,19 @@
 	  将任务指派给
 	</li>
 	<li class="mission-distributor-menu-item">
-	  <div class="input-group-sm">
-	    <div class="input-group input-group-sm mb-3 mission-distributor-input">
-              <input type="text" class="form-control" placeholder="请输入成员姓名 (或拼音)">
-              <div class="input-group-btn">
-                <button class="btn btn-default" type="submit">
-                  <span class="glyphicon glyphicon-triangle-bottom"></span>
-                </button>
-              </div>
+	  <div class="input-group input-group-sm mb-3 mission-distributor-input-group">
+            <input type="text"
+		   class="form-control mission-member-input"
+		   placeholder="请输入成员姓名 (或拼音)"
+		   data-action="click->missiondistributor#clickMemberInput">
+            <div class="input-group-btn">
+              <button class="btn btn-default"
+		      type="submit"
+		      data-action="missiondistributor#clickMemberMenuButton">
+                <span class="glyphicon glyphicon-triangle-bottom"></span>
+              </button>
             </div>
-	  </div>
+          </div>
         </li>
         <li class="mission-distributor-menu-item-title">
           任务截止时间
@@ -48,10 +51,12 @@
       </ul>
     </div>
 
-    <div>
-      <ul class="mission-member-menu">
+    <div class="mission-member-menu"
+	 data-controller="missiondistributor">
+      <ul>
 	<% @member_array.each do |member| %>
 	  <li class="mission-member-menu-item">
+            <%= image_tag(member[:photo_url], width: 22, height: 22) %>
 	    <%= member[:name] %>
 	  </li>
 	  <% unless member == @member_array.last %>
@@ -176,8 +181,8 @@
           </span>
         </label>
         <button type="button"
-		class="btn mission-distributor"
-		data-action="mission#changeDistributor">
+		      class="btn mission-distributor"
+		      data-action="mission#changeDistributor">
 	  未指派
 	</button>
       </li>
