Click toggle button don't hide member menu.

--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -29,7 +29,7 @@
 		   placeholder="请输入成员姓名 (或拼音)"
 		   data-action="click->missiondistributor#clickMemberInput input->missiondistributor#changeMemberInput">
             <div class="input-group-btn">
-              <button class="btn btn-default"
+              <button class="btn btn-default mission-member-toggle-button"
 		      type="submit"
 		      data-action="missiondistributor#clickMemberMenuButton">
                 <span class="glyphicon glyphicon-triangle-bottom"></span>
