--- a/app/views/mission_lists/_mission_edit_form.html.erb
+++ b/app/views/mission_lists/_mission_edit_form.html.erb
@@ -7,7 +7,7 @@
              class="edit-input"
              placeholder="新的任务"
              data-action="keydown->mission#enterMissionEdit">
-      <button type="button" class="btn mission-distributor">未指派</button>
+      <button type="button" class="btn mission-distributor-button">未指派</button>
     </div>
     <div>
       <button class="btn-sm mission-edit-submit-button"
