--- a/app/views/missions/_create_mission.html.erb
+++ b/app/views/missions/_create_mission.html.erb
@@ -10,6 +10,6 @@
       <%= mission.name %>
     </a>
   </label>
-  <button type="button" class="btn mission-distributor">未指派</button>
+  <button type="button" class="btn mission-distributor-button">未指派</button>
 </li>
 <%= render "mission_lists/mission_edit_form" %>
