Save data when hide distributor menu, ready to update mission member/date.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1461,3 +1461,7 @@ input[type="checkbox"]:disabled + label::before {
 .mission-member-pinyin {
     display: none;
 }
+
+.mission-member-userid {
+    display: none;
+}
