1. Remove avatar_thumb from user. 2. Can't invite new member if current user is not administrator.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
   </form>
   <div class="glyphicon glyphicon-bell top-header-bell"></div>
   <div class="top-header-icon inline-block">
-    <%= image_tag current_user.avatar_thumb_url %>
+    <%= image_tag(current_user.avatar_url, width: 24, height: 24) %>
   </div>
   <a href="#"
      class="glyphicon glyphicon-triangle-bottom top-header-item top-header-menu-button"
