--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -9,23 +9,25 @@
       <div class="member-count">
 	(共 <%= @member_array.length %> 人)
       </div>
-      <%= link_to "添加新成员", new_team_member_path, :class => "float-right add-link-button member-invite-button" %>
+      <% if team_administrator? %>
+	<%= link_to "添加新成员", new_team_member_path, :class => "float-right add-link-button member-invite-button" %>
+      <% end %>
       <ul>
         <% @member_array.each do |member| %>
           <li class="member-item flex-vcenter">
             <div class="member-item-icon">
-              <%= image_tag member[:photo_url] %>
+	      <%= image_tag member[:photo_url] %>
             </div>
             <div class="member-item-name">
-              <%= link_to member_path(member[:user_hashid]), class: "member-item-name-button" do %>
+	      <%= link_to member_path(member[:user_hashid]), class: "member-item-name-button" do %>
 		<%= member[:name] %>
 	      <% end %>
             </div>
             <div class= <%= member[:color] %>>
-              <%= member[:type] %>
+	      <%= member[:type] %>
             </div>
             <div class="member-item-email">
-              <%= member[:email] %>
+	      <%= member[:email] %>
             </div>
           </li>
         <% end %>
