--- a/app/views/users/update_user_photo.js.erb
+++ b/app/views/users/update_user_photo.js.erb
@@ -1,2 +1,2 @@
 $(".setting-icon img").attr("src", "<%= @photo_url %>");
-$(".top-header-icon img").attr("src", "<%= @photo_thumb_url %>");
+$(".top-header-icon img").attr("src", "<%= @photo_url %>");
