Finish mission distributor loop.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -636,13 +636,13 @@ $phone-page-top-bar-height: 54px;
     font-size: 8px;
     color: #666;
     background: #fff;
-    width: 52px;
-    height: 18px;
-    padding-top: 0px;
-    padding-bottom: 0px;
-    padding-left: 1px;
-    padding-right: 1px;
-    margin-top: 0px;
+    width: max-content;
+    height: 22px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 5px;
     margin-left: 10px;
     border: $button-border;
     border-radius: 20px;
