--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -14,7 +14,7 @@
           <%= image_tag current_user.avatar_url %>
         </div>
         <div class="inline-block">
-	  <%= form_for current_user, :html => {:multipart => true, id: "user-photo-form"}, :remote => true do |f| %>
+	  <%= form_for current_user, :html => {:multipart => true, id: "user-photo-form", action: "update_avatar"}, :remote => true do |f| %>
 
 	    <div class="setting-icon-upload-button">
               <label for="attachment-input">
