Remove outline from mission distributor button

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -644,6 +644,7 @@ $phone-page-top-bar-height: 54px;
     margin-left: 10px;
     border: $button-border;
     border-radius: 20px;
+    outline: none !important;
 }
 
 .mission-distributor-empty {
