--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -183,7 +183,7 @@
       </li>
 
       <li id=<%= @mission.hashid %>
-          class="mission-title-item margin-top-normal"
+          class="mission-title-item margin-top-normal flex-vcenter"
           data-action="mouseenter->mission#mouseEnterMission mouseleave->mission#mouseLeaveMission">
         <input type="checkbox" class="mission-checkbox" id=<%= @mission.hashid %>>
         <label for=<%= @mission.hashid %>
