Use _mission_distributor_button layout remove duplicate code.

--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -153,16 +153,7 @@
                    class="edit-input"
                    placeholder="新的任务"
                    data-action="keydown->mission#enterMissionPageEdit">
-            <button type="button"
-                    class="<%= @mission.mission_distributor_button_class %>"
-                    data-controller="missiondistributor"
-                    data-action="missiondistributor#clickDistributorButton"
-                    data-missionid=<%= @mission.hashid %>
-                    data-userid=<%= @mission.user_id %>
-		    data-username=<%= @mission.user_name %>
-		    data-date=<%= @mission.format_finish_time %> >
-              <%= @mission.format_distributor_info %>
-            </button>
+            <%= render "layouts/mission_distributor_button", mission: @mission %>
           </div>
           <% if @mission.summary && !@mission.summary.empty? %>
             <textarea class="mission-edit-textarea" placeholder="任务描述">
@@ -198,16 +189,7 @@
             <%= @mission.name %>
           </span>
         </label>
-        <button type="button"
-                class="<%= @mission.mission_distributor_button_class %>"
-                data-controller="missiondistributor"
-                data-action="missiondistributor#clickDistributorButton"
-                data-missionid=<%= @mission.hashid %>
-                data-userid=<%= @mission.user_id %>
-                data-username=<%= @mission.user_name %>
-                data-date=<%= @mission.format_finish_time %> >
-          <%= @mission.format_distributor_info %>
-        </button>
+        <%= render "layouts/mission_distributor_button", mission: @mission %>
       </li>
       <% if !@mission.summary || @mission.summary.empty? %>
         <div class="mission-add-summary-button">
