Fixed mission new form can't work, cause by refacotry input's class name.

--- a/app/views/mission_lists/_mission_new_form.html.erb
+++ b/app/views/mission_lists/_mission_new_form.html.erb
@@ -4,7 +4,7 @@
     <div class="flex-vcenter">
       <label class="mission-input-line"></label>
       <input type="text"
-             class="edit-input"
+             class="edit-input mission-edit-input"
              placeholder="新的任务"
              data-action="keydown->mission#enterMissionNew">
       <button type="button" class="btn mission-distributor-button">未指派</button>
