--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,9 +3,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body class="fill-background-color" id="<%= controller.controller_name %>-<%= controller.action_name %>">
+
+    <div class="menu-eventarea"
+         data-controller="comment missiondistributor"
+         data-action="click@window->comment#onClick click@window->missiondistributor#onClick">
+    </div>
+
     <%= render 'layouts/header' %>
     <%= render "layouts/confirm_dialog", dialogid: "confirm-dialog", message: "确定要删除这个任务吗?", controller: "mission", action: "mission#deleteMission" %>
     <%= render "layouts/mission_toolbar" %>
+
+    <%= render "layouts/mission_distributor_menu" %>
 
     <div class="board-box min-board-height right-float-menu-parent"
          data-controller="mission rightfloatmenu"
