--- a/app/views/mission_lists/show.html.erb
+++ b/app/views/mission_lists/show.html.erb
@@ -3,9 +3,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body class="fill-background-color" id="<%= controller.controller_name %>-<%= controller.action_name %>">
+    <div class="menu-eventarea"
+         data-controller="comment missiondistributor"
+         data-action="click@window->comment#onClick click@window->missiondistributor#onClick">
+    </div>
+    
     <%= render "layouts/loading_dialog", message: "正在删除任务列表..." %>
     <%= render "layouts/mission_toolbar" %>
     <%= render 'layouts/header' %>
+
+    <%= render "layouts/mission_distributor_menu" %>
 
     <%= link_to project_url(@project.hashid) do %>
       <div class="bread-crumbs-big">
